# graphql-check-action

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  action.yml
.github/: renovate.json
.github/workflows/: docker-publish.yml  integration_tests.yml  release.yml  rust_checks.yml  test.yml
benches/: integration.rs
src/: lib.rs  main.rs
