[package]
name = "graphql-check-action"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.5"
ureq = { version = "2.6.2", features = ["json"] }
serde_json = "1.0.97"

[dev-dependencies]
const_format = "0.2.31"
criterion = { version = "0.5.1" }

[[bench]]
name = "integration"
harness = false
