[package]
name = "graphql-check-action"
version = "2.0.0"
edition = "2021"

[profile.release]
lto = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.11.0"
ureq = { version = "2.7.1", features = ["json"] }
serde_json = "1.0.100"

[dev-dependencies]
const_format = "0.2.31"
criterion = { version = "0.5.1" }

[[bench]]
name = "integration"
harness = false
